--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
-certifi==2022.12.7
-idna==3.4
-pip==21.3.1
-pyTelegramBotAPI==4.10.0
-schedule==1.1.0
-urllib3==1.26.15
-wheel==0.37.1
+arrow                 ==1.2.3
+certifi               ==2022.12.7
+charset-normalizer    ==3.1.0
+flake8                ==6.0.0
+idna                  ==3.4
+mccabe                ==0.7.0
+pip                   ==21.3.1
+pycodestyle           ==2.10.0
+pyflakes              ==3.0.1
+pyTelegramBotAPI      ==4.10.0
+python-dateutil       ==2.8.2
+pytz                  ==2023.3
+pytz-deprecation-shim ==0.1.0.post0
+requests              ==2.28.2
+schedule              ==1.1.0
+setuptools            ==60.2.0
+six                   ==1.16.0
+tzdata                ==2023.3
+tzlocal               ==4.3
+urllib3               ==1.26.15
+wheel                 ==0.37.1
+
