--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,4 @@ tzdata                ==2023.3
 tzlocal               ==4.3
 urllib3               ==1.26.15
 wheel                 ==0.37.1
-
+python-dotenv         ==1.0.0
